# botv2

./: .gitignore  README.md
bot/: Cargo.toml  d.md  package-lock.json  pairs.txt  t_data.txt  taken.script.js  w_data.txt
bot/src/: common.rs  embed_preset.rs  emojis.rs  ext.rs  get_image.rs  huge_lists.rs  main.rs  paginator.rs  sf.rs
bot/src/commands/: categories.rs  colours.rs  combine.rs  gplot.rs  image.rs  image_tags.rs  image_url.rs  info.rs  latex.rs  mod.rs  ocr.rs  oeis.rs  ping.rs  plot.rs  rng.rs  tags.rs  test.rs  tetr.rs  wolfram_alpha.rs
imagga/: Cargo.toml
imagga/src/: barcodes.rs  categories.rs  categorizers.rs  colors.rs  coordinates.rs  croppings.rs  error.rs  faces_detections.rs  faces_similarity.rs  lib.rs  output.rs  tags.rs  text.rs  usage.rs
spotify/: Cargo.toml
spotify/src/: lib.rs
ucd/: Cargo.toml
ucd/mtest/: Cargo.toml
ucd/mtest/src/: main.rs
ucd/src/: lib.rs
ucd/src/model/: bidi_class.rs  bidi_paired_bracket_type.rs  block.rs  codepoint.rs  decomposition_type.rs  east_asian_width.rs  general_category.rs  grapheme_cluster_break.rs  hangul_syllable_type.rs  indic_positional_category.rs  indic_syllabic_category.rs  jamo_short_name.rs  joining_group.rs  joining_type.rs  linebreak.rs  mod.rs  numeric_type.rs  numeric_value.rs  script.rs  sentence_break.rs  word_break.rs  yn.rs
wa/: Cargo.toml  t.ts
wa/src/: error.rs  lib.rs  model.rs  util.rs
