[package]
name = "botv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.2"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
clap = { version = "4.3.11", features = ["derive"] }
image = "0.24.6"
exmex = "0.17.3"
regex = "1.9.1"
url = "2.4.0"
async-recursion = "1.0.4"
imagga = { path = "../imagga" }
wa = { path = "../wa" }
ucd = { path = "../ucd" }
tabled = "0.12.2"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
gif = "0.12.0"
fraction = "0.13.1"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
futures = "0.3.28"
